--- a/new_file.html
+++ b/new_file.html
@@ -2,41 +2,36 @@
 <html ng-app="app">
 	<head>
 		<meta charset="utf-8" />
+		<link href="bootstrap/css/font-awesome.min.css" rel="stylesheet" />
 		<link href="bootstrap/css/bootstrap.css" rel="stylesheet" />
 		<link href="css/new_file.css" type="text/css" rel="stylesheet" />
 
 	</head>
 	<body>
-		<nav ng-controller="ctrl1">
-			<h1 class="h1">{{name}} </h1>
-
-			|
-			<button ng-click="sort('HOME')" class="glyphicon glyphicon-home"></button>
-			|
-
-			<ul class="nav nav-pills" ng-controller="ctrl1">
-				<li ng-repeat="c in ul"  role="presentation" class="active">
-					<a href="#">{{c}}</a>
-				</li>
-			</ul>
-		</nav>
-		<br>
-
+		<div  ng-controller="ctrl1">
+			<nav >
+				<h1 class="title">{{name}}</h1>
+				<div>
+					<ul class="nav nav-tabs nav-justified" ng-controller="ctrl1">
+						<li ng-repeat="c in routeData"   class="nav nav-pills nav-justified">
+							<a ng-href="#{{c.url}}">{{c.name}}</a>
+						</li>
+					</ul>
+			</nav>
+			<br>
 		</div>
+		
+		</div>
+		<ng-view></ng-view>
 		<div>
-			<video playsinline autoplay muted loop poster="polina.jpg" id="bgvid">
-				<source src="polina.webm" type="video/webm">
-				<source src="video/McDonalds Australia 'Smoky BBQ Angus Burger' 2011 ad.mp4" type="video/mp4">
-			</video>
-			<div ng-controller="ctrl2">
-				<ali></ali>
-
-			</div>
-			<script src="bootstrap/jquery-3.1.1.min.js"></script>
-			<script src="bootstrap/js/bootstrap.js"></script>
 			<script src="js/angular.js"></script>
+			<script src="js/angular-route/angular-route.js"></script>
+			<script src="js/config.js"></script>
+			<script src="bootstrap/jquery-3.1.1.min.js"></script>
+			<script src="js/route.js"></script>
+			<script src="bootstrap/js/bootstrap.js"></script>
 			<script src="controller/controller.js"></script>
-			<script src="controller/ul.js"></script>
+			<script src="controller/ctrl1.js"></script>
 			<script src="controller/directive.js"></script>
 	</body>
 
