--- a/new_file.html
+++ b/new_file.html
@@ -5,14 +5,27 @@
 		<link href="bootstrap/css/font-awesome.min.css" rel="stylesheet" />
 		<link href="bootstrap/css/bootstrap.css" rel="stylesheet" />
 		<link href="css/new_file.css" type="text/css" rel="stylesheet" />
+<script src="https://www.gstatic.com/firebasejs/3.6.0/firebase.js"></script>
 
 	</head>
 	<body>
-		<div  ng-controller="ctrl1">
+		<script>
+  // Initialize Firebase
+  var config = {
+    apiKey: "AIzaSyBTyt5x8nWkkef9B5HwDm-6-RsE3iJMxpQ",
+    authDomain: "pro-restaurant.firebaseapp.com",
+    databaseURL: "https://pro-restaurant.firebaseio.com",
+    storageBucket: "pro-restaurant.appspot.com",
+    messagingSenderId: "29680576077"
+  };
+  firebase.initializeApp(config);
+</script>
+		<div  ng-controller="logonctrl">
+			
 			<nav >
 				<h1 class="title">{{name}}</h1>
 				<div>
-					<ul class="nav nav-tabs nav-justified" ng-controller="ctrl1">
+					<ul  class="nav nav-tabs nav-justified"  ng-controller="logonctrl">
 						<li ng-repeat="c in routeData"   class="nav nav-pills nav-justified">
 							<a ng-href="#{{c.url}}">{{c.name}}</a>
 						</li>
@@ -20,10 +33,9 @@
 			</nav>
 			<br>
 		</div>
-		
-		</div>
+		<div>	
 		<ng-view></ng-view>
-		<div>
+		</div>
 			<script src="js/angular.js"></script>
 			<script src="js/angular-route/angular-route.js"></script>
 			<script src="js/config.js"></script>
@@ -31,7 +43,7 @@
 			<script src="js/route.js"></script>
 			<script src="bootstrap/js/bootstrap.js"></script>
 			<script src="controller/controller.js"></script>
-			<script src="controller/ctrl1.js"></script>
+			<!-- <script src="controller/ctrl1.js"></script> -->
 			<script src="controller/directive.js"></script>
 	</body>
 
