--- a/home.html
+++ b/home.html
@@ -5,9 +5,9 @@
 			<img  class="img-circle" width=80% height=80% ng-src="{{dessets.img}}" />
 			<a class="btn-group btn-group-justified" role="group" ng-href="{{dessets.img}}">{{dessets.name}}</a>
 			</li>
-			<li ng-repeat="specials in specials" >
-			<img ng-click="{{specials.img}}" class="img-circle" width=80% height=80% ng-src="{{specials.img}}" />
-			<a class="btn-group btn-group-justified" role="group" ng-href="{{specials.img}}">{{specials.name}}</a>
+			<li ng-repeat="special in specials" >
+			<img class="img-circle" width=80% height=80% ng-src="{{special.img}}" />
+			<a class="btn-group btn-group-justified" role="group" ng-href="{{special.img}}">{{special.name}}</a>
 			</li>
 	</ul>
 	</div>
